--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.3.6",
     "@types/react-dom": "^18.3.0",
     "bootstrap": "^5.3.3",
+    "firebase": "^10.13.1",
     "graphql": "^16.9.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
